コメント追加

--- a/test.html
+++ b/test.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
-    
     <link rel="stylesheet" href="example.css">
     <title>地震速報</title>
 </head>
