--- a/test.html
+++ b/test.html
@@ -9,32 +9,39 @@
 
 <body>
     <h1>地震情報</h1>
-    <div id="earthQuake0">
-        <p id="time0"></p>
-        <p id="area0"></p>
-        <p id="magnitude0"></p>
+    <H3>直近5件の地震情報を表示しています。ページは1分ごとに更新されます。</H3>
+    <div class="infomation">
+        <div class="flame0" id="earthQuake0">
+            <p class="text1" id="No0">1</p>
+            <p class="text0" id="time0"></p>
+            <p class="text0" id="area0"></p>
+            <p class="text0" id="magnitude0"></p>
+        </div>
+        <div class="flame0" id="earthQuake1">
+            <p class="text1" id="No1">2</p>
+            <p class="text0" id="time1"></p>
+            <p class="text0" id="area1"></p>
+            <p class="text0" id="magnitude1"></p>
+        </div>
+        <div class="flame0" id="earthQuake2">
+            <p class="text1" id="No2">3</p>
+            <p class="text0" id="time2"></p>
+            <p class="text0" id="area2"></p>
+            <p class="text0" id="magnitude2"></p>
+        </div>
+        <div class="flame0" id="earthQuake3">
+            <p class="text1" id="No3">4</p>
+            <p class="text0" id="time3"></p>
+            <p class="text0" id="area3"></p>
+            <p class="text0" id="magnitude3"></p>
+        </div>
+        <div class="flame0" id="earthQuake4">
+            <p class="text1" id="No4">5</p>
+            <p class="text0" id="time4"></p>
+            <p class="text0" id="area4"></p>
+            <p class="text0" id="magnitude4"></p>
+        </div>
     </div>
-    <div id="earthQuake1">
-        <p id="time1"></p>
-        <p id="area1"></p>
-        <p id="magnitude1"></p>
-    </div>
-    <div id="earthQuake2">
-        <p id="time2"></p>
-        <p id="area2"></p>
-        <p id="magnitude2"></p>
-    </div>
-    <div id="earthQuake3">
-        <p id="time3"></p>
-        <p id="area3"></p>
-        <p id="magnitude3"></p>
-    </div>
-    <div id="earthQuake4">
-        <p id="time4"></p>
-        <p id="area4"></p>
-        <p id="magnitude4"></p>
-    </div>
-
     <script src="test.js">
     </script>
 </body>
