--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="example.css">
+    <link rel="stylesheet" href="test.css">
     <title>地震速報</title>
 </head>
 
@@ -42,8 +42,9 @@
             <p class="text0" id="magnitude4"></p>
         </div>
     </div>
-    <script src="test.js">
-    </script>
+
+    <script src="function.js"></script>
+    <script src="test.js"></script>
 </body>
 
 </html>
